--- a/index.html
+++ b/index.html
@@ -27,6 +27,16 @@
 				</ul>
 			</div>
 		</nav>
+		<!-- Home -->
+		<section id="home">
+			<img src="imgs/내사진.jpg" alt="My Avatar Photo" class="home__avatar" />
+			<h1 class="home__title">Hello, <br />I'm Hong Seung Hee</h1>
+			<h2 class="home__description">
+				I'm studying to have the capabilities of both front-end and back-end
+				developers.
+			</h2>
+			<button class="home__contact">CONTACT ME</button>
+		</section>
 		<!-- About -->
 		<section id="about"></section>
 		<!-- Skills -->
