--- a/index.html
+++ b/index.html
@@ -27,18 +27,79 @@
 				</ul>
 			</div>
 		</nav>
+
 		<!-- Home -->
 		<section id="home">
 			<img src="imgs/내사진.jpg" alt="My Avatar Photo" class="home__avatar" />
-			<h1 class="home__title">Hello, <br />I'm Hong Seung Hee</h1>
+			<h1 class="home__title">안녕하세요, <br />저는 홍승희입니다.</h1>
 			<h2 class="home__description">
-				I'm studying to have the capabilities of both front-end and back-end
-				developers.
+				저는 Front-end와 Back-end를 넘나드는 Full-Stack 개발자가 되기 위해
+				열심히 공부하고 있습니다.
 			</h2>
 			<button class="home__contact">CONTACT ME</button>
 		</section>
+
 		<!-- About -->
-		<section id="about"></section>
+		<section id="about">
+			<h1>About me</h1>
+			<p>
+				컴퓨터 공학 4년 학위를 취득하고, 학교 생활 동안 4, 5개의 프로젝트를
+				수행했으며, GitHub를 이용하여 작업한 프로젝트를 보관 및 관리하고
+				있습니다.
+			</p>
+			<div class="about__majors">
+				<div class="major">
+					<div class="major__icon">
+						<i class="fab fa-html5"></i>
+					</div>
+					<div class="major__title">
+						HTML5
+					</div>
+					<div class="major__description">
+						마크업, 깔끔한 코드, BEM의 사용, 주석처리
+					</div>
+				</div>
+				<div class="major">
+					<div class="major__icon">
+						<i class="fab fa-css3-alt"></i>
+					</div>
+					<div class="major__title">
+						CSS3
+					</div>
+					<div class="major__description">
+						깔끔한 스타일링, CSS변수 사용, Media Query 사용을 통한 반응형
+						웹페이지
+					</div>
+				</div>
+				<div class="major">
+					<div class="major__icon">
+						<i class="fab fa-js-square"></i>
+					</div>
+					<div class="major__title">
+						JavaScript
+					</div>
+					<div class="major__description">
+						DOM에 대한 이해, JSON을 통한 동적인 처리, 클래스와 함수의 사용
+					</div>
+				</div>
+			</div>
+			<div class="about__schools">
+				<div class="school">
+					<img src="imgs/한신대.png" alt="HanShin" />
+					<p class="school__name">
+						한신대학교, 컴퓨터 전공
+					</p>
+					<p class="school__period">4년제 학사</p>
+				</div>
+				<div class="school">
+					<img src="imgs/한신대.png" alt="HanShin" />
+					<p class="school__name">
+						3학년 ~ 4학년까지 전액 장학금
+					</p>
+					<p class="school__period">2년간 수령</p>
+				</div>
+			</div>
+		</section>
 		<!-- Skills -->
 		<section id="skills"></section>
 		<!-- Work -->
