--- a/index.html
+++ b/index.html
@@ -31,10 +31,9 @@
 		<!-- Home -->
 		<section id="home">
 			<img src="imgs/내사진.jpg" alt="My Avatar Photo" class="home__avatar" />
-			<h1 class="home__title">안녕하세요, <br />저는 홍승희입니다.</h1>
+			<h1 class="home__title"></h1>Hello, <br />I'm Hong Seung Hee</h1>
 			<h2 class="home__description">
-				저는 Front-end와 Back-end를 넘나드는 Full-Stack 개발자가 되기 위해
-				열심히 공부하고 있습니다.
+				I'm studying hard to become a full-stack developer across Front-end and Back-end.
 			</h2>
 			<button class="home__contact">CONTACT ME</button>
 		</section>
@@ -43,9 +42,9 @@
 		<section id="about">
 			<h1>About me</h1>
 			<p>
-				컴퓨터 공학 4년 학위를 취득하고, 학교 생활 동안 4, 5개의 프로젝트를
-				수행했으며, GitHub를 이용하여 작업한 프로젝트를 보관 및 관리하고
-				있습니다.
+				I have a four-year degree in computer science, 
+				four or five projects during my school years, 
+				and I keep and manage projects I've worked on using GitHub.
 			</p>
 			<div class="about__majors">
 				<div class="major">
@@ -56,7 +55,7 @@
 						HTML5
 					</div>
 					<div class="major__description">
-						마크업, 깔끔한 코드, BEM의 사용, 주석처리
+						Markup, clean code, use of BEM, annotating
 					</div>
 				</div>
 				<div class="major">
@@ -67,8 +66,7 @@
 						CSS3
 					</div>
 					<div class="major__description">
-						깔끔한 스타일링, CSS변수 사용, Media Query 사용을 통한 반응형
-						웹페이지
+						neat styling, Using CSS Variables, Reactive Web pages with Media Query
 					</div>
 				</div>
 				<div class="major">
@@ -79,7 +77,7 @@
 						JavaScript
 					</div>
 					<div class="major__description">
-						DOM에 대한 이해, JSON을 통한 동적인 처리, 클래스와 함수의 사용
+						Understanding DOM, Dynamic Processing with JSON, Use of Classes and Functions
 					</div>
 				</div>
 			</div>
@@ -87,21 +85,99 @@
 				<div class="school">
 					<img src="imgs/한신대.png" alt="HanShin" />
 					<p class="school__name">
-						한신대학교, 컴퓨터 전공
+						HanShin University, Major: Computer Science
 					</p>
-					<p class="school__period">4년제 학사</p>
+					<p class="school__period">a four-year bachelor's degree</p>
 				</div>
 				<div class="school">
 					<img src="imgs/한신대.png" alt="HanShin" />
 					<p class="school__name">
-						3학년 ~ 4학년까지 전액 장학금
+						a full scholarship from third to fourth graders
 					</p>
-					<p class="school__period">2년간 수령</p>
+					<p class="school__period">two-year receipt</p>
 				</div>
 			</div>
 		</section>
+
 		<!-- Skills -->
-		<section id="skills"></section>
+		<section id="skills">
+			<h1>Skills</h1>
+			<h2>SKills & Attritbutes</h2>
+			<p>I like learning new things and I have a passion. Also, I try to finish my work as perfectly as possible, 
+				regardless of individual or team size, and I like to find and do it actively if I don't have any work.</p>
+				<div class="skillset">
+					<div class="skillset__left">
+						<h3 class="skillset__title">Skills</h3>
+						<div class="skill">			
+							<div class="skill__description">
+								<span>HTML</span>
+								<span>95%</span>
+							</div>
+						<div class="skill__bar">
+							<div class="skill__value"></div>
+						</div>
+						</div>
+						<div class="skill">			
+							<div class="skill__description">
+								<span>CSS</span>
+								<span>90%</span>
+							</div>
+						<div class="skill__bar">
+							<div class="skill__value"></div>
+						</div>
+						</div>
+						<div class="skill">			
+							<div class="skill__description">
+								<span>JavaScript</span>
+								<span>83%</span>
+							</div>
+						<div class="skill__bar">
+							<div class="skill__value"></div>
+						</div>
+						</div>
+						<div class="skill">			
+							<div class="skill__description">
+								<span>Java</span>
+								<span>80%</span>
+							</div>
+						<div class="skill__bar">
+							<div class="skill__value"></div>
+						</div>
+						</div>
+						<div class="skill">			
+							<div class="skill__description">
+								<span>PHP</span>
+								<span>83%</span>
+							</div>
+						<div class="skill__bar">
+							<div class="skill__value"></div>
+						</div>
+						</div>
+						
+					</div>
+					<div class="skillset__right">
+						<div class="tools">
+							<h3 class="tools__title">Tools</h3>
+							<ul class="tools__list">
+								<li><span>Visual Studio Code</span></li>
+								<li><span>Dev C++</span></li>
+								<li><span>Edit Plus</span></li>
+								<li><span>Eclips</span></li>
+								<li><span>IDEE</span></li>
+							</ul>
+						</div>
+						<div class="etc">
+							<h3 class="etc__title">Etc</h3>
+							<ul class="etc__list">
+								<li><span>GitHub</span></li>
+								<li><span>MariaDB</span></li>
+								<li><span>Math</span></li>
+								<li><span>perseverance and enthusiasm</span></li>
+							</ul>
+						</div>
+					</div>
+				</div>
+		</section>
 		<!-- Work -->
 		<section id="work"></section>
 		<!-- Testimonials -->
