--- a/index.html
+++ b/index.html
@@ -178,8 +178,63 @@
 					</div>
 				</div>
 		</section>
+
 		<!-- Work -->
-		<section id="work"></section>
+		<section id="work">
+			<h1>My Work</h1>
+			<h3>Projects</h3>
+			<div class="work__categories">
+				<button class="category__btn">All <span class="category__count">6</span></button>
+				<button class="category__btn">Google <span class="category__count">2</span></button>
+				<button class="category__btn">Youtube <span class="category__count">2</span></button>
+				<button class="category__btn">Online-Shop <span class="category__count">2</span></button>
+			</div>
+
+			<div class="work__projects">
+				<a href="https://github.com/sejong77/Google-Clone-Coding" class="project" target="blank">
+					<img src="imgs/Project img/Google(Desktop).png" alt="Google(Desktop)">
+					<div class="project__description">
+						<h3>Google Site</h3>
+						<span>Clone Coding With HTML5 and CSS3</span>
+					</div>
+				</a>
+				<a href="https://github.com/sejong77/Google-Clone-Coding" class="project" target="blank">
+					<img src="imgs/Project img/Google(mobile).png" alt="Google(Mobile)">
+					<div class="project__description">
+						<h3>Google Site</h3>
+						<span>Clone Coding With HTML5 and CSS3</span>
+					</div>
+				</a>
+				<a href="https://github.com/sejong77/Youtube-Clone-Coding" class="project" target="blank">
+					<img src="imgs/Project img/Youtube(Desktop).png" alt="Youtube(Desktop)">
+					<div class="project__description">
+						<h3>Youtube Site</h3>
+						<span>Clone Coding With HTML5, CSS3, JavaScript</span>
+					</div>
+				</a>
+				<a href="https://github.com/sejong77/Youtube-Clone-Coding" class="project" target="blank">
+					<img src="imgs/Project img/Youtube(mobile).png" alt="Youtube(Mobile)">
+					<div class="project__description">
+						<h3>Youtube Site</h3>
+						<span>Clone Coding With HTML5, CSS3, JavaScript</span>
+					</div>
+				</a>
+				<a href="https://github.com/sejong77/Online-Shopping" class="project" target="blank">
+					<img src="imgs/Project img/Online-Shop(Desktop).png" alt="Online-Shop(Desktop)">
+					<div class="project__description">
+						<h3>Online-Shopping Mall</h3>
+						<span>Mini Project With HTML5, CSS3, JavaScript and JSON</span>
+					</div>
+				</a>
+				<a href="https://github.com/sejong77/Online-Shopping" class="project" target="blank">
+					<img src="imgs/Project img/Online-Shop(mobile).png" alt="Online-Shop(Mobile)">
+					<div class="project__description">
+						<h3>Online-Shopping Mall</h3>
+						<span>Mini Project With HTML5, CSS3, JavaScript and JSON</span>
+					</div>
+				</a>
+			</div>
+		</section>
 		<!-- Testimonials -->
 		<section id="testimonials"></section>
 		<!-- Contact -->
