--- a/index.html
+++ b/index.html
@@ -235,8 +235,30 @@
 				</a>
 			</div>
 		</section>
+
 		<!-- Testimonials -->
-		<section id="testimonials"></section>
+		<section id="testimonials">
+			<h1>Testimonials</h1>
+			<h3>See What they say about me</h3>
+			<div class="testimonials">
+				<div class="testimonial">
+					<img src="imgs/people1.jpg" alt="people" class="testimonial__avatar">
+					<div class="testimonial__speech-bubble">
+						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, reprehenderit! Atque non nemo saepe, 
+							amet inventore exercitationem quos tempore culpa error, 
+							dicta quisquam natus et eius assumenda ipsam autem suscipit.</p>
+					</div>
+				</div>
+				<div class="testimonial">
+					<img src="imgs/people1.jpg" alt="people" class="testimonial__avatar">
+					<div class="testimonial__speech-bubble">
+						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, reprehenderit! Atque non nemo saepe, 
+							amet inventore exercitationem quos tempore culpa error, 
+							dicta quisquam natus et eius assumenda ipsam autem suscipit.</p>
+					</div>
+				</div>
+			</div>
+		</section>
 		<!-- Contact -->
 		<section id="contact"></section>
 	</body>
