--- a/index.html
+++ b/index.html
@@ -247,6 +247,7 @@
 						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, reprehenderit! Atque non nemo saepe, 
 							amet inventore exercitationem quos tempore culpa error, 
 							dicta quisquam natus et eius assumenda ipsam autem suscipit.</p>
+						<p><a href="https://github.com/sejong77">Hong</a> / HanShin</p>
 					</div>
 				</div>
 				<div class="testimonial">
@@ -255,11 +256,18 @@
 						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, reprehenderit! Atque non nemo saepe, 
 							amet inventore exercitationem quos tempore culpa error, 
 							dicta quisquam natus et eius assumenda ipsam autem suscipit.</p>
+						<p><a href="https://github.com/sejong77">Hong</a> / HanShin</p>
 					</div>
 				</div>
 			</div>
 		</section>
+
 		<!-- Contact -->
-		<section id="contact"></section>
+		<section id="contact">
+			<h1 class="contact__tit">Let's Talk</h1>
+			<h2 class="contact__email">77sejong@gmail.com</h2>
+			<a href="https://github.com/sejong77" target="blank"><i class="fab fa-github"></i></a>
+			<p class="contact__rights">2020 Hong Seung Hee - Let's be good developers</p>
+		</section>
 	</body>
 </html>
