--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Hong's Portfolio</title>
+		<link rel="stylesheet" href="style.css">
+		<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" 
+		rel="stylesheet">
 		<script
 			src="https://kit.fontawesome.com/3348a1fec6.js"
 			crossorigin="anonymous"
