--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Hong's Portfolio</title>
-		<link rel="stylesheet" href="style.css">
-		<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" 
-		rel="stylesheet">
+		<link rel="stylesheet" href="style.css" />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
+			rel="stylesheet"
+		/>
 		<script
 			src="https://kit.fontawesome.com/3348a1fec6.js"
 			crossorigin="anonymous"
@@ -34,9 +36,10 @@
 		<!-- Home -->
 		<section id="home">
 			<img src="imgs/내사진.jpg" alt="My Avatar Photo" class="home__avatar" />
-			<h1 class="home__title"></h1>Hello, <br />I'm Hong Seung Hee</h1>
+			<h1 class="home__title">Hello, <br />I'm Hong Seung Hee</h1>
 			<h2 class="home__description">
-				I'm studying hard to become a full-stack developer across Front-end and Back-end.
+				I'm studying hard to become a full-stack developer across Front-end and
+				Back-end.
 			</h2>
 			<button class="home__contact">CONTACT ME</button>
 		</section>
@@ -45,9 +48,9 @@
 		<section id="about">
 			<h1>About me</h1>
 			<p>
-				I have a four-year degree in computer science, 
-				four or five projects during my school years, 
-				and I keep and manage projects I've worked on using GitHub.
+				I have a four-year degree in computer science, four or five projects
+				during my school years, and I keep and manage projects I've worked on
+				using GitHub.
 			</p>
 			<div class="about__majors">
 				<div class="major">
@@ -69,7 +72,8 @@
 						CSS3
 					</div>
 					<div class="major__description">
-						neat styling, Using CSS Variables, Reactive Web pages with Media Query
+						neat styling, Using CSS Variables, Reactive Web pages with Media
+						Query
 					</div>
 				</div>
 				<div class="major">
@@ -80,7 +84,8 @@
 						JavaScript
 					</div>
 					<div class="major__description">
-						Understanding DOM, Dynamic Processing with JSON, Use of Classes and Functions
+						Understanding DOM, Dynamic Processing with JSON, Use of Classes and
+						Functions
 					</div>
 				</div>
 			</div>
@@ -106,80 +111,82 @@
 		<section id="skills">
 			<h1>Skills</h1>
 			<h2>SKills & Attritbutes</h2>
-			<p>I like learning new things and I have a passion. Also, I try to finish my work as perfectly as possible, 
-				regardless of individual or team size, and I like to find and do it actively if I don't have any work.</p>
-				<div class="skillset">
-					<div class="skillset__left">
-						<h3 class="skillset__title">Skills</h3>
-						<div class="skill">			
-							<div class="skill__description">
-								<span>HTML</span>
-								<span>95%</span>
-							</div>
+			<p>
+				I like learning new things and I have a passion. Also, I try to finish
+				my work as perfectly as possible, regardless of individual or team size,
+				and I like to find and do it actively if I don't have any work.
+			</p>
+			<div class="skillset">
+				<div class="skillset__left">
+					<h3 class="skillset__title">Skills</h3>
+					<div class="skill">
+						<div class="skill__description">
+							<span>HTML</span>
+							<span>95%</span>
+						</div>
 						<div class="skill__bar">
 							<div class="skill__value"></div>
 						</div>
-						</div>
-						<div class="skill">			
-							<div class="skill__description">
-								<span>CSS</span>
-								<span>90%</span>
-							</div>
-						<div class="skill__bar">
-							<div class="skill__value"></div>
-						</div>
-						</div>
-						<div class="skill">			
-							<div class="skill__description">
-								<span>JavaScript</span>
-								<span>83%</span>
-							</div>
-						<div class="skill__bar">
-							<div class="skill__value"></div>
-						</div>
-						</div>
-						<div class="skill">			
-							<div class="skill__description">
-								<span>Java</span>
-								<span>80%</span>
-							</div>
-						<div class="skill__bar">
-							<div class="skill__value"></div>
-						</div>
-						</div>
-						<div class="skill">			
-							<div class="skill__description">
-								<span>PHP</span>
-								<span>83%</span>
-							</div>
-						<div class="skill__bar">
-							<div class="skill__value"></div>
-						</div>
-						</div>
-						
 					</div>
-					<div class="skillset__right">
-						<div class="tools">
-							<h3 class="tools__title">Tools</h3>
-							<ul class="tools__list">
-								<li><span>Visual Studio Code</span></li>
-								<li><span>Dev C++</span></li>
-								<li><span>Edit Plus</span></li>
-								<li><span>Eclips</span></li>
-								<li><span>IDEE</span></li>
-							</ul>
+					<div class="skill">
+						<div class="skill__description">
+							<span>CSS</span>
+							<span>90%</span>
 						</div>
-						<div class="etc">
-							<h3 class="etc__title">Etc</h3>
-							<ul class="etc__list">
-								<li><span>GitHub</span></li>
-								<li><span>MariaDB</span></li>
-								<li><span>Math</span></li>
-								<li><span>perseverance and enthusiasm</span></li>
-							</ul>
+						<div class="skill__bar">
+							<div class="skill__value"></div>
+						</div>
+					</div>
+					<div class="skill">
+						<div class="skill__description">
+							<span>JavaScript</span>
+							<span>83%</span>
+						</div>
+						<div class="skill__bar">
+							<div class="skill__value"></div>
+						</div>
+					</div>
+					<div class="skill">
+						<div class="skill__description">
+							<span>Java</span>
+							<span>80%</span>
+						</div>
+						<div class="skill__bar">
+							<div class="skill__value"></div>
+						</div>
+					</div>
+					<div class="skill">
+						<div class="skill__description">
+							<span>PHP</span>
+							<span>83%</span>
+						</div>
+						<div class="skill__bar">
+							<div class="skill__value"></div>
 						</div>
 					</div>
 				</div>
+				<div class="skillset__right">
+					<div class="tools">
+						<h3 class="tools__title">Tools</h3>
+						<ul class="tools__list">
+							<li><span>Visual Studio Code</span></li>
+							<li><span>Dev C++</span></li>
+							<li><span>Edit Plus</span></li>
+							<li><span>Eclips</span></li>
+							<li><span>IDEE</span></li>
+						</ul>
+					</div>
+					<div class="etc">
+						<h3 class="etc__title">Etc</h3>
+						<ul class="etc__list">
+							<li><span>GitHub</span></li>
+							<li><span>MariaDB</span></li>
+							<li><span>Math</span></li>
+							<li><span>perseverance and enthusiasm</span></li>
+						</ul>
+					</div>
+				</div>
+			</div>
 		</section>
 
 		<!-- Work -->
@@ -187,50 +194,97 @@
 			<h1>My Work</h1>
 			<h3>Projects</h3>
 			<div class="work__categories">
-				<button class="category__btn">All <span class="category__count">6</span></button>
-				<button class="category__btn">Google <span class="category__count">2</span></button>
-				<button class="category__btn">Youtube <span class="category__count">2</span></button>
-				<button class="category__btn">Online-Shop <span class="category__count">2</span></button>
+				<button class="category__btn">
+					All <span class="category__count">6</span>
+				</button>
+				<button class="category__btn">
+					Google <span class="category__count">2</span>
+				</button>
+				<button class="category__btn">
+					Youtube <span class="category__count">2</span>
+				</button>
+				<button class="category__btn">
+					Online-Shop <span class="category__count">2</span>
+				</button>
 			</div>
 
 			<div class="work__projects">
-				<a href="https://github.com/sejong77/Google-Clone-Coding" class="project" target="blank">
-					<img src="imgs/Project img/Google(Desktop).png" alt="Google(Desktop)">
+				<a
+					href="https://github.com/sejong77/Google-Clone-Coding"
+					class="project"
+					target="blank"
+				>
+					<img
+						src="imgs/Project img/Google(Desktop).png"
+						alt="Google(Desktop)"
+					/>
 					<div class="project__description">
 						<h3>Google Site</h3>
 						<span>Clone Coding With HTML5 and CSS3</span>
 					</div>
 				</a>
-				<a href="https://github.com/sejong77/Google-Clone-Coding" class="project" target="blank">
-					<img src="imgs/Project img/Google(mobile).png" alt="Google(Mobile)">
+				<a
+					href="https://github.com/sejong77/Google-Clone-Coding"
+					class="project"
+					target="blank"
+				>
+					<img src="imgs/Project img/Google(mobile).png" alt="Google(Mobile)" />
 					<div class="project__description">
 						<h3>Google Site</h3>
 						<span>Clone Coding With HTML5 and CSS3</span>
 					</div>
 				</a>
-				<a href="https://github.com/sejong77/Youtube-Clone-Coding" class="project" target="blank">
-					<img src="imgs/Project img/Youtube(Desktop).png" alt="Youtube(Desktop)">
+				<a
+					href="https://github.com/sejong77/Youtube-Clone-Coding"
+					class="project"
+					target="blank"
+				>
+					<img
+						src="imgs/Project img/Youtube(Desktop).png"
+						alt="Youtube(Desktop)"
+					/>
 					<div class="project__description">
 						<h3>Youtube Site</h3>
 						<span>Clone Coding With HTML5, CSS3, JavaScript</span>
 					</div>
 				</a>
-				<a href="https://github.com/sejong77/Youtube-Clone-Coding" class="project" target="blank">
-					<img src="imgs/Project img/Youtube(mobile).png" alt="Youtube(Mobile)">
+				<a
+					href="https://github.com/sejong77/Youtube-Clone-Coding"
+					class="project"
+					target="blank"
+				>
+					<img
+						src="imgs/Project img/Youtube(mobile).png"
+						alt="Youtube(Mobile)"
+					/>
 					<div class="project__description">
 						<h3>Youtube Site</h3>
 						<span>Clone Coding With HTML5, CSS3, JavaScript</span>
 					</div>
 				</a>
-				<a href="https://github.com/sejong77/Online-Shopping" class="project" target="blank">
-					<img src="imgs/Project img/Online-Shop(Desktop).png" alt="Online-Shop(Desktop)">
+				<a
+					href="https://github.com/sejong77/Online-Shopping"
+					class="project"
+					target="blank"
+				>
+					<img
+						src="imgs/Project img/Online-Shop(Desktop).png"
+						alt="Online-Shop(Desktop)"
+					/>
 					<div class="project__description">
 						<h3>Online-Shopping Mall</h3>
 						<span>Mini Project With HTML5, CSS3, JavaScript and JSON</span>
 					</div>
 				</a>
-				<a href="https://github.com/sejong77/Online-Shopping" class="project" target="blank">
-					<img src="imgs/Project img/Online-Shop(mobile).png" alt="Online-Shop(Mobile)">
+				<a
+					href="https://github.com/sejong77/Online-Shopping"
+					class="project"
+					target="blank"
+				>
+					<img
+						src="imgs/Project img/Online-Shop(mobile).png"
+						alt="Online-Shop(Mobile)"
+					/>
 					<div class="project__description">
 						<h3>Online-Shopping Mall</h3>
 						<span>Mini Project With HTML5, CSS3, JavaScript and JSON</span>
@@ -245,20 +299,34 @@
 			<h3>See What they say about me</h3>
 			<div class="testimonials">
 				<div class="testimonial">
-					<img src="imgs/people1.jpg" alt="people" class="testimonial__avatar">
+					<img
+						src="imgs/people1.jpg"
+						alt="people"
+						class="testimonial__avatar"
+					/>
 					<div class="testimonial__speech-bubble">
-						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, reprehenderit! Atque non nemo saepe, 
-							amet inventore exercitationem quos tempore culpa error, 
-							dicta quisquam natus et eius assumenda ipsam autem suscipit.</p>
+						<p>
+							Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed,
+							reprehenderit! Atque non nemo saepe, amet inventore exercitationem
+							quos tempore culpa error, dicta quisquam natus et eius assumenda
+							ipsam autem suscipit.
+						</p>
 						<p><a href="https://github.com/sejong77">Hong</a> / HanShin</p>
 					</div>
 				</div>
 				<div class="testimonial">
-					<img src="imgs/people1.jpg" alt="people" class="testimonial__avatar">
+					<img
+						src="imgs/people1.jpg"
+						alt="people"
+						class="testimonial__avatar"
+					/>
 					<div class="testimonial__speech-bubble">
-						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, reprehenderit! Atque non nemo saepe, 
-							amet inventore exercitationem quos tempore culpa error, 
-							dicta quisquam natus et eius assumenda ipsam autem suscipit.</p>
+						<p>
+							Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed,
+							reprehenderit! Atque non nemo saepe, amet inventore exercitationem
+							quos tempore culpa error, dicta quisquam natus et eius assumenda
+							ipsam autem suscipit.
+						</p>
 						<p><a href="https://github.com/sejong77">Hong</a> / HanShin</p>
 					</div>
 				</div>
@@ -269,8 +337,12 @@
 		<section id="contact">
 			<h1 class="contact__tit">Let's Talk</h1>
 			<h2 class="contact__email">77sejong@gmail.com</h2>
-			<a href="https://github.com/sejong77" target="blank"><i class="fab fa-github"></i></a>
-			<p class="contact__rights">2020 Hong Seung Hee - Let's be good developers</p>
+			<a href="https://github.com/sejong77" target="blank"
+				><i class="fab fa-github"></i
+			></a>
+			<p class="contact__rights">
+				2020 Hong Seung Hee - Let's be good developers
+			</p>
 		</section>
 	</body>
 </html>
