--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 		</section>
 
 		<!-- About -->
-		<section id="about">
+		<section id="about" class="section">
 			<h1>About me</h1>
 			<p>
 				I have a four-year degree in computer science, four or five projects
@@ -54,61 +54,69 @@
 			</p>
 			<div class="about__majors">
 				<div class="major">
-					<div class="major__icon">
+					<div class="major__icon html">
 						<i class="fab fa-html5"></i>
 					</div>
-					<div class="major__title">
+					<h2 class="major__title">
 						HTML5
-					</div>
+					</h2>
 					<div class="major__description">
 						Markup, clean code, use of BEM, annotating
 					</div>
 				</div>
 				<div class="major">
-					<div class="major__icon">
+					<div class="major__icon css">
 						<i class="fab fa-css3-alt"></i>
 					</div>
-					<div class="major__title">
+					<h2 class="major__title">
 						CSS3
-					</div>
+					</h2>
 					<div class="major__description">
-						neat styling, Using CSS Variables, Reactive Web pages with Media
-						Query
+						neat styling, Using CSS Variables, <br />Reactive Web pages with
+						Media Query
 					</div>
 				</div>
 				<div class="major">
-					<div class="major__icon">
+					<div class="major__icon js">
 						<i class="fab fa-js-square"></i>
 					</div>
-					<div class="major__title">
+					<h2 class="major__title">
 						JavaScript
-					</div>
+					</h2>
 					<div class="major__description">
-						Understanding DOM, Dynamic Processing with JSON, Use of Classes and
-						Functions
+						Understanding DOM, <br />Dynamic Processing with JSON, Use of
+						Classes and Functions
 					</div>
 				</div>
 			</div>
 			<div class="about__schools">
 				<div class="school">
-					<img src="imgs/한신대.png" alt="HanShin" />
-					<p class="school__name">
-						HanShin University, Major: Computer Science
-					</p>
-					<p class="school__period">a four-year bachelor's degree</p>
+					<a href="http://www.hs.ac.kr/sites/kor/index.do" target="blank">
+						<img src="imgs/한신대.png" alt="HanShin" />
+					</a>
+					<div class="school__description">
+						<p class="school__name">
+							HanShin University, Major: Computer Science
+						</p>
+						<p class="school__period">2016 ~ 2021 Bachelor</p>
+					</div>
 				</div>
 				<div class="school">
-					<img src="imgs/한신대.png" alt="HanShin" />
-					<p class="school__name">
-						a full scholarship from third to fourth graders
-					</p>
-					<p class="school__period">two-year receipt</p>
+					<a href="http://www.hs.ac.kr/sites/kor/index.do" target="blank">
+						<img src="imgs/한신대.png" alt="HanShin" />
+					</a>
+					<div class="school__description">
+						<p class="school__name">
+							a full scholarship from third to fourth graders
+						</p>
+						<p class="school__period">2020 ~ 2021 scholarship receipt</p>
+					</div>
 				</div>
 			</div>
 		</section>
 
 		<!-- Skills -->
-		<section id="skills">
+		<section id="skills" class="section">
 			<h1>Skills</h1>
 			<h2>SKills & Attritbutes</h2>
 			<p>
@@ -190,7 +198,7 @@
 		</section>
 
 		<!-- Work -->
-		<section id="work">
+		<section id="work" class="section">
 			<h1>My Work</h1>
 			<h3>Projects</h3>
 			<div class="work__categories">
@@ -294,7 +302,7 @@
 		</section>
 
 		<!-- Testimonials -->
-		<section id="testimonials">
+		<section id="testimonials" class="section">
 			<h1>Testimonials</h1>
 			<h3>See What they say about me</h3>
 			<div class="testimonials">
@@ -334,7 +342,7 @@
 		</section>
 
 		<!-- Contact -->
-		<section id="contact">
+		<section id="contact" class="section">
 			<h1 class="contact__tit">Let's Talk</h1>
 			<h2 class="contact__email">77sejong@gmail.com</h2>
 			<a href="https://github.com/sejong77" target="blank"
