--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 		</section>
 
 		<!-- About -->
-		<section id="about" class="section">
+		<section id="about" class="section section__container">
 			<h1>About me</h1>
 			<p>
 				I have a four-year degree in computer science, four or five projects
@@ -117,81 +117,83 @@
 
 		<!-- Skills -->
 		<section id="skills" class="section">
-			<h1>Skills</h1>
-			<h2>SKills & Attritbutes</h2>
-			<p>
-				I like learning new things and I have a passion. Also, I try to finish
-				my work as perfectly as possible, regardless of individual or team size,
-				and I like to find and do it actively if I don't have any work.
-			</p>
-			<div class="skillset">
-				<div class="skillset__left">
-					<h3 class="skillset__title">Skills</h3>
-					<div class="skill">
-						<div class="skill__description">
-							<span>HTML</span>
-							<span>95%</span>
+			<div class="section__container">
+				<h1>Skills</h1>
+				<h2>SKills & Attritbutes</h2>
+				<p>
+					I like learning new things and I have a passion. Also, I try to finish
+					my work as perfectly as possible, regardless of individual or team
+					size, and I like to find and do it actively if I don't have any work.
+				</p>
+				<div class="skillset">
+					<div class="skillset__left">
+						<h2 class="skillset__title">Skills</h2>
+						<div class="skill">
+							<div class="skill__description">
+								<span>HTML</span>
+								<span>95%</span>
+							</div>
+							<div class="skill__bar">
+								<div class="skill__value" style="width: 95%;"></div>
+							</div>
 						</div>
-						<div class="skill__bar">
-							<div class="skill__value"></div>
+						<div class="skill">
+							<div class="skill__description">
+								<span>CSS</span>
+								<span>90%</span>
+							</div>
+							<div class="skill__bar">
+								<div class="skill__value" style="width: 90%;"></div>
+							</div>
+						</div>
+						<div class="skill">
+							<div class="skill__description">
+								<span>JavaScript</span>
+								<span>83%</span>
+							</div>
+							<div class="skill__bar">
+								<div class="skill__value" style="width: 83%;"></div>
+							</div>
+						</div>
+						<div class="skill">
+							<div class="skill__description">
+								<span>Java</span>
+								<span>80%</span>
+							</div>
+							<div class="skill__bar">
+								<div class="skill__value" style="width: 80%;"></div>
+							</div>
+						</div>
+						<div class="skill">
+							<div class="skill__description">
+								<span>PHP</span>
+								<span>83%</span>
+							</div>
+							<div class="skill__bar">
+								<div class="skill__value" style="width: 83%;"></div>
+							</div>
 						</div>
 					</div>
-					<div class="skill">
-						<div class="skill__description">
-							<span>CSS</span>
-							<span>90%</span>
+					<div class="skillset__right">
+						<div class="tools">
+							<h2 class="tools__title">Tools</h2>
+							<ul class="tools__list">
+								<li><span>Visual Studio Code</span></li>
+								<li><span>Dev C++</span></li>
+								<li><span>Edit Plus</span></li>
+								<li><span>Eclips</span></li>
+								<li><span>IDEE</span></li>
+							</ul>
 						</div>
-						<div class="skill__bar">
-							<div class="skill__value"></div>
+						<div class="etc">
+							<h2 class="etc__title">Etc</h2>
+							<ul class="etc__list">
+								<li><span>GitHub</span></li>
+								<li><span>MariaDB</span></li>
+								<li><span>Math</span></li>
+								<li><span>perseverance and enthusiasm</span></li>
+							</ul>
 						</div>
-					</div>
-					<div class="skill">
-						<div class="skill__description">
-							<span>JavaScript</span>
-							<span>83%</span>
-						</div>
-						<div class="skill__bar">
-							<div class="skill__value"></div>
-						</div>
-					</div>
-					<div class="skill">
-						<div class="skill__description">
-							<span>Java</span>
-							<span>80%</span>
-						</div>
-						<div class="skill__bar">
-							<div class="skill__value"></div>
-						</div>
-					</div>
-					<div class="skill">
-						<div class="skill__description">
-							<span>PHP</span>
-							<span>83%</span>
-						</div>
-						<div class="skill__bar">
-							<div class="skill__value"></div>
-						</div>
-					</div>
-				</div>
-				<div class="skillset__right">
-					<div class="tools">
-						<h3 class="tools__title">Tools</h3>
-						<ul class="tools__list">
-							<li><span>Visual Studio Code</span></li>
-							<li><span>Dev C++</span></li>
-							<li><span>Edit Plus</span></li>
-							<li><span>Eclips</span></li>
-							<li><span>IDEE</span></li>
-						</ul>
-					</div>
-					<div class="etc">
-						<h3 class="etc__title">Etc</h3>
-						<ul class="etc__list">
-							<li><span>GitHub</span></li>
-							<li><span>MariaDB</span></li>
-							<li><span>Math</span></li>
-							<li><span>perseverance and enthusiasm</span></li>
-						</ul>
 					</div>
 				</div>
 			</div>
