--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
 			<h1>My Work</h1>
 			<h3>Projects</h3>
 			<div class="work__categories">
-				<button class="category__btn">
+				<button class="category__btn active">
 					All <span class="category__count">6</span>
 				</button>
 				<button class="category__btn">
@@ -227,9 +227,10 @@
 					<img
 						src="imgs/Project img/Google(Desktop).png"
 						alt="Google(Desktop)"
+						class="desktop"
 					/>
 					<div class="project__description">
-						<h3>Google Site</h3>
+						<h3>Google Site(Desktop)</h3>
 						<span>Clone Coding With HTML5 and CSS3</span>
 					</div>
 				</a>
@@ -238,9 +239,13 @@
 					class="project"
 					target="blank"
 				>
-					<img src="imgs/Project img/Google(mobile).png" alt="Google(Mobile)" />
+					<img
+						src="imgs/Project img/Google(mobile).png"
+						alt="Google(Mobile)"
+						class="mobile"
+					/>
 					<div class="project__description">
-						<h3>Google Site</h3>
+						<h3>Google Site(Mobile)</h3>
 						<span>Clone Coding With HTML5 and CSS3</span>
 					</div>
 				</a>
@@ -252,9 +257,10 @@
 					<img
 						src="imgs/Project img/Youtube(Desktop).png"
 						alt="Youtube(Desktop)"
+						class="desktop"
 					/>
 					<div class="project__description">
-						<h3>Youtube Site</h3>
+						<h3>Youtube Site(Desktop)</h3>
 						<span>Clone Coding With HTML5, CSS3, JavaScript</span>
 					</div>
 				</a>
@@ -266,9 +272,10 @@
 					<img
 						src="imgs/Project img/Youtube(mobile).png"
 						alt="Youtube(Mobile)"
+						class="mobile"
 					/>
 					<div class="project__description">
-						<h3>Youtube Site</h3>
+						<h3>Youtube Site(Mobile)</h3>
 						<span>Clone Coding With HTML5, CSS3, JavaScript</span>
 					</div>
 				</a>
@@ -280,9 +287,10 @@
 					<img
 						src="imgs/Project img/Online-Shop(Desktop).png"
 						alt="Online-Shop(Desktop)"
+						class="desktop"
 					/>
 					<div class="project__description">
-						<h3>Online-Shopping Mall</h3>
+						<h3>Online-Shopping Mall(Desktop)</h3>
 						<span>Mini Project With HTML5, CSS3, JavaScript and JSON</span>
 					</div>
 				</a>
@@ -294,9 +302,10 @@
 					<img
 						src="imgs/Project img/Online-Shop(mobile).png"
 						alt="Online-Shop(Mobile)"
+						class="mobile"
 					/>
 					<div class="project__description">
-						<h3>Online-Shopping Mall</h3>
+						<h3>Online-Shopping Mall(Mobile)</h3>
 						<span>Mini Project With HTML5, CSS3, JavaScript and JSON</span>
 					</div>
 				</a>
