--- a/index.html
+++ b/index.html
@@ -330,15 +330,13 @@
 							quos tempore culpa error, dicta quisquam natus et eius assumenda
 							ipsam autem suscipit.
 						</p>
-						<p><a href="https://github.com/sejong77">Hong</a> / HanShin</p>
+						<p>
+							<a href="https://github.com/sejong77" target="blank">Hong</a> /
+							HanShin
+						</p>
 					</div>
 				</div>
 				<div class="testimonial">
-					<img
-						src="imgs/people1.jpg"
-						alt="people"
-						class="testimonial__avatar"
-					/>
 					<div class="testimonial__speech-bubble">
 						<p>
 							Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed,
@@ -346,8 +344,16 @@
 							quos tempore culpa error, dicta quisquam natus et eius assumenda
 							ipsam autem suscipit.
 						</p>
-						<p><a href="https://github.com/sejong77">Hong</a> / HanShin</p>
+						<p>
+							<a href="https://github.com/sejong77" target="blank">Hong</a> /
+							HanShin
+						</p>
 					</div>
+					<img
+						src="imgs/people1.jpg"
+						alt="people"
+						class="testimonial__avatar"
+					/>
 				</div>
 			</div>
 		</section>
