--- a/index.html
+++ b/index.html
@@ -360,10 +360,10 @@
 
 		<!-- Contact -->
 		<section id="contact" class="section">
-			<h1 class="contact__tit">Let's Talk</h1>
+			<h1 class="contact__title">Let's Talk</h1>
 			<h2 class="contact__email">77sejong@gmail.com</h2>
 			<a href="https://github.com/sejong77" target="blank"
-				><i class="fab fa-github"></i
+				>My Git hub address: <i class="fab fa-github"></i
 			></a>
 			<p class="contact__rights">
 				2020 Hong Seung Hee - Let's be good developers
