CSS(fix Section Container)

--- a/index.html
+++ b/index.html
@@ -201,159 +201,163 @@
 
 		<!-- Work -->
 		<section id="work" class="section">
-			<h1>My Work</h1>
-			<h3>Projects</h3>
-			<div class="work__categories">
-				<button class="category__btn active">
-					All <span class="category__count">6</span>
-				</button>
-				<button class="category__btn">
-					Google <span class="category__count">2</span>
-				</button>
-				<button class="category__btn">
-					Youtube <span class="category__count">2</span>
-				</button>
-				<button class="category__btn">
-					Online-Shop <span class="category__count">2</span>
-				</button>
-			</div>
+			<div class="section__container">
+				<h1>My Work</h1>
+				<h3>Projects</h3>
+				<div class="work__categories">
+					<button class="category__btn active">
+						All <span class="category__count">6</span>
+					</button>
+					<button class="category__btn">
+						Google <span class="category__count">2</span>
+					</button>
+					<button class="category__btn">
+						Youtube <span class="category__count">2</span>
+					</button>
+					<button class="category__btn">
+						Online-Shop <span class="category__count">2</span>
+					</button>
+				</div>
 
-			<div class="work__projects">
-				<a
-					href="https://github.com/sejong77/Google-Clone-Coding"
-					class="project"
-					target="blank"
-				>
-					<img
-						src="imgs/Project img/Google(Desktop).png"
-						alt="Google(Desktop)"
-						class="desktop"
-					/>
-					<div class="project__description">
-						<h3>Google Site(Desktop)</h3>
-						<span>Clone Coding With HTML5 and CSS3</span>
-					</div>
-				</a>
-				<a
-					href="https://github.com/sejong77/Google-Clone-Coding"
-					class="project"
-					target="blank"
-				>
-					<img
-						src="imgs/Project img/Google(mobile).png"
-						alt="Google(Mobile)"
-						class="mobile"
-					/>
-					<div class="project__description">
-						<h3>Google Site(Mobile)</h3>
-						<span>Clone Coding With HTML5 and CSS3</span>
-					</div>
-				</a>
-				<a
-					href="https://github.com/sejong77/Youtube-Clone-Coding"
-					class="project"
-					target="blank"
-				>
-					<img
-						src="imgs/Project img/Youtube(Desktop).png"
-						alt="Youtube(Desktop)"
-						class="desktop"
-					/>
-					<div class="project__description">
-						<h3>Youtube Site(Desktop)</h3>
-						<span>Clone Coding With HTML5, CSS3, JavaScript</span>
-					</div>
-				</a>
-				<a
-					href="https://github.com/sejong77/Youtube-Clone-Coding"
-					class="project"
-					target="blank"
-				>
-					<img
-						src="imgs/Project img/Youtube(mobile).png"
-						alt="Youtube(Mobile)"
-						class="mobile"
-					/>
-					<div class="project__description">
-						<h3>Youtube Site(Mobile)</h3>
-						<span>Clone Coding With HTML5, CSS3, JavaScript</span>
-					</div>
-				</a>
-				<a
-					href="https://github.com/sejong77/Online-Shopping"
-					class="project"
-					target="blank"
-				>
-					<img
-						src="imgs/Project img/Online-Shop(Desktop).png"
-						alt="Online-Shop(Desktop)"
-						class="desktop"
-					/>
-					<div class="project__description">
-						<h3>Online-Shopping Mall(Desktop)</h3>
-						<span>Mini Project With HTML5, CSS3, JavaScript and JSON</span>
-					</div>
-				</a>
-				<a
-					href="https://github.com/sejong77/Online-Shopping"
-					class="project"
-					target="blank"
-				>
-					<img
-						src="imgs/Project img/Online-Shop(mobile).png"
-						alt="Online-Shop(Mobile)"
-						class="mobile"
-					/>
-					<div class="project__description">
-						<h3>Online-Shopping Mall(Mobile)</h3>
-						<span>Mini Project With HTML5, CSS3, JavaScript and JSON</span>
-					</div>
-				</a>
+				<div class="work__projects">
+					<a
+						href="https://github.com/sejong77/Google-Clone-Coding"
+						class="project"
+						target="blank"
+					>
+						<img
+							src="imgs/Project img/Google(Desktop).png"
+							alt="Google(Desktop)"
+							class="desktop"
+						/>
+						<div class="project__description">
+							<h3>Google Site(Desktop)</h3>
+							<span>Clone Coding With HTML5 and CSS3</span>
+						</div>
+					</a>
+					<a
+						href="https://github.com/sejong77/Google-Clone-Coding"
+						class="project"
+						target="blank"
+					>
+						<img
+							src="imgs/Project img/Google(mobile).png"
+							alt="Google(Mobile)"
+							class="mobile"
+						/>
+						<div class="project__description">
+							<h3>Google Site(Mobile)</h3>
+							<span>Clone Coding With HTML5 and CSS3</span>
+						</div>
+					</a>
+					<a
+						href="https://github.com/sejong77/Youtube-Clone-Coding"
+						class="project"
+						target="blank"
+					>
+						<img
+							src="imgs/Project img/Youtube(Desktop).png"
+							alt="Youtube(Desktop)"
+							class="desktop"
+						/>
+						<div class="project__description">
+							<h3>Youtube Site(Desktop)</h3>
+							<span>Clone Coding With HTML5, CSS3, JavaScript</span>
+						</div>
+					</a>
+					<a
+						href="https://github.com/sejong77/Youtube-Clone-Coding"
+						class="project"
+						target="blank"
+					>
+						<img
+							src="imgs/Project img/Youtube(mobile).png"
+							alt="Youtube(Mobile)"
+							class="mobile"
+						/>
+						<div class="project__description">
+							<h3>Youtube Site(Mobile)</h3>
+							<span>Clone Coding With HTML5, CSS3, JavaScript</span>
+						</div>
+					</a>
+					<a
+						href="https://github.com/sejong77/Online-Shopping"
+						class="project"
+						target="blank"
+					>
+						<img
+							src="imgs/Project img/Online-Shop(Desktop).png"
+							alt="Online-Shop(Desktop)"
+							class="desktop"
+						/>
+						<div class="project__description">
+							<h3>Online-Shopping Mall(Desktop)</h3>
+							<span>Mini Project With HTML5, CSS3, JavaScript and JSON</span>
+						</div>
+					</a>
+					<a
+						href="https://github.com/sejong77/Online-Shopping"
+						class="project"
+						target="blank"
+					>
+						<img
+							src="imgs/Project img/Online-Shop(mobile).png"
+							alt="Online-Shop(Mobile)"
+							class="mobile"
+						/>
+						<div class="project__description">
+							<h3>Online-Shopping Mall(Mobile)</h3>
+							<span>Mini Project With HTML5, CSS3, JavaScript and JSON</span>
+						</div>
+					</a>
+				</div>
 			</div>
 		</section>
 
 		<!-- Testimonials -->
 		<section id="testimonials" class="section">
-			<h1>Testimonials</h1>
-			<h3>See What they say about me</h3>
-			<div class="testimonials">
-				<div class="testimonial">
-					<img
-						src="imgs/people1.jpg"
-						alt="people"
-						class="testimonial__avatar"
-					/>
-					<div class="testimonial__speech-bubble">
-						<p>
-							Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed,
-							reprehenderit! Atque non nemo saepe, amet inventore exercitationem
-							quos tempore culpa error, dicta quisquam natus et eius assumenda
-							ipsam autem suscipit.
-						</p>
-						<p>
-							<a href="https://github.com/sejong77" target="blank">Hong</a> /
-							HanShin
-						</p>
+			<div class="section__container">
+				<h1>Testimonials</h1>
+				<h3>See What they say about me</h3>
+				<div class="testimonials">
+					<div class="testimonial">
+						<img
+							src="imgs/people1.jpg"
+							alt="people"
+							class="testimonial__avatar"
+						/>
+						<div class="testimonial__speech-bubble">
+							<p>
+								Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed,
+								reprehenderit! Atque non nemo saepe, amet inventore
+								exercitationem quos tempore culpa error, dicta quisquam natus et
+								eius assumenda ipsam autem suscipit.
+							</p>
+							<p>
+								<a href="https://github.com/sejong77" target="blank">Hong</a> /
+								HanShin
+							</p>
+						</div>
 					</div>
-				</div>
-				<div class="testimonial">
-					<div class="testimonial__speech-bubble">
-						<p>
-							Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed,
-							reprehenderit! Atque non nemo saepe, amet inventore exercitationem
-							quos tempore culpa error, dicta quisquam natus et eius assumenda
-							ipsam autem suscipit.
-						</p>
-						<p>
-							<a href="https://github.com/sejong77" target="blank">Hong</a> /
-							HanShin
-						</p>
+					<div class="testimonial">
+						<div class="testimonial__speech-bubble">
+							<p>
+								Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed,
+								reprehenderit! Atque non nemo saepe, amet inventore
+								exercitationem quos tempore culpa error, dicta quisquam natus et
+								eius assumenda ipsam autem suscipit.
+							</p>
+							<p>
+								<a href="https://github.com/sejong77" target="blank">Hong</a> /
+								HanShin
+							</p>
+						</div>
+						<img
+							src="imgs/people1.jpg"
+							alt="people"
+							class="testimonial__avatar"
+						/>
 					</div>
-					<img
-						src="imgs/people1.jpg"
-						alt="people"
-						class="testimonial__avatar"
-					/>
 				</div>
 			</div>
 		</section>
