--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 			src="https://kit.fontawesome.com/3348a1fec6.js"
 			crossorigin="anonymous"
 		></script>
+		<script src="main.js" defer></script>
 	</head>
 	<body>
 		<!-- Navbar -->
