--- a/index.html
+++ b/index.html
@@ -24,12 +24,14 @@
 			</div>
 			<div class="navbar__menu">
 				<ul class="navbar__menu">
-					<li class="navbar__menu__item">Home</li>
-					<li class="navbar__menu__item">About</li>
-					<li class="navbar__menu__item">SKills</li>
-					<li class="navbar__menu__item">My Work</li>
-					<li class="navbar__menu__item">Testimonials</li>
-					<li class="navbar__menu__item">Contact</li>
+					<li class="navbar__menu__item" data-link="#home">Home</li>
+					<li class="navbar__menu__item" data-link="#about">About</li>
+					<li class="navbar__menu__item" data-link="#skills">SKills</li>
+					<li class="navbar__menu__item" data-link="#work">My Work</li>
+					<li class="navbar__menu__item" data-link="#testimonials">
+						Testimonials
+					</li>
+					<li class="navbar__menu__item" data-link="#contact">Contact</li>
 				</ul>
 			</div>
 
@@ -47,7 +49,7 @@
 				I'm studying hard to become a full-stack developer across Front-end and
 				Back-end.
 			</h2>
-			<button class="home__contact">CONTACT ME</button>
+			<button class="home__contact" data-link="#contact">CONTACT ME</button>
 		</section>
 
 		<!-- About -->
